# compress-me

./: .clang-format  .gitignore  3rd-party-licence  LICENSE  README.md  meson.build  meson_options.txt
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml  greetings.yml  main.yml
benchmarks/: cmmap_insert_at.cpp  main.cpp  meson.build
examples/: meson.build  zstd_map.cpp
script/: bootstrap  cibuild  cover  test
scripts/: bootstrap  cibuild  cover  coverity  test
src/: cdsc.h  cm.h  cm_map.h  common.h  compressable_map.h  config.h  config.h.in  error.h
src/core/: common.h  compressable.h  example.cpp
subprojects/: benchmark.wrap  catch2.wrap  zstd.wrap
tests/: cm_map_tests.cpp  compressable_map.cpp  meson.build  test_common.h
