option('enable-lib',  type : 'boolean',  value : true,
  description : 'Enables library.')

option('enable-tests',  type : 'boolean',  value : true,
  description : 'Enables tests.')

option('enable-benchmarks',  type : 'boolean',  value : true,
  description : 'Enables benchmarks.')

option('enable-examples',  type : 'boolean',  value : true,
  description : 'Enables examples.')
